--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="col-sm-12 text-center">
 				<h1 class="background-highlight">{{site.name}}</h1>
         <h2 class="background-highlight">CyberSEEC 2020
-        | Click below to sign up!</h2>
+        | Click Logo to sign up!</h2>
 	       <a href="{{site.externalLink}}"><img src="{{site.logo}}" style="width:40%"/></a>
       </div>
     </div> <!-- /row -->
