--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     {% if site.facebookEventLink %}
     <div class="row">
       <div class="col-sm-12 text-center">
-        <a href="{{site.facebookEventLink}}">RSVP on facebook</a>
+        <a href="{{site.facebookEventLink}}">RSVP before October 16th HERE</a>
       </div>
     </div>
     {% endif %}
